--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
+    "test": "jest",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
@@ -27,7 +28,10 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "lodash": "^4.17.21",
+    "pokersolver": "^2.1.4",
+    "nanoid": "^3.1.23"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -41,6 +45,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.5.1",
     "office-addin-cli": "^1.3.5",
     "office-addin-debugging": "^4.3.8",
     "office-addin-dev-certs": "^1.7.7",
@@ -50,6 +55,7 @@
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "source-map-loader": "^3.0.0",
+    "test": "^0.6.0",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.50.0",
